Fixed page on small screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,7 @@ aside {
   margin-left: -0.5rem;
   border: 0;
   background-color: transparent;
+  cursor: pointer;
 }
 
 #dashboardButton {
@@ -232,11 +233,15 @@ main {
 
 #mainCardsContainer {
   width: 100%;
-  max-height: 85%;
+  max-height: 90%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: repeat(3, 33%);
+  grid-auto-rows: 15rem;
   gap: 1rem;
+  overflow-y: auto;
+}
+#mainCardsContainer::-webkit-scrollbar {
+  width: 0px;
 }
 
 .mainCard {
@@ -283,6 +288,7 @@ section {
   grid-column: 3/3;
   margin: 2rem 2rem 2rem 1rem;
   font-weight: 600;
+  overflow-y: hidden;
 }
 
 #annCardsContainer {
@@ -291,6 +297,7 @@ section {
   background-color: #FFF;
   border-radius: 10px;
   margin-bottom: 2rem;
+  overflow-y: auto;
 }
 
 .annCard {
